appId: com.puciec.cinefav
env:
  SEARCH_TERM: "Matrix"
---
- launchApp
- tapOn:
    id: "login-email-input"
- inputText: "aluno@puc.br"
- tapOn:
    id: "login-password-input"
- inputText: "1234"
- tapOn:
    id: "login-submit-button"
- tapOn:
    id: "movielist-search-button"
- tapOn:
    id: "search-input"
- inputText: "${SEARCH_TERM}"
- assertVisible: "Matrix"
