# Flow 2 — Preencher formulário de usuário e submeter
appId: com.apptestesmobile
---
- launchApp
- tapOn:
    id: "home-category-functional"
- tapOn:
    id: "userform-name-input"
- inputText: "Teste Smoke"
- tapOn:
    id: "userform-email-input"
- inputText: "smoke@test.com"
- tapOn:
    id: "userform-submit-button"
- assertVisible: "Smoke"
