appId: com.puciec.cinefav
---
- launchApp
- tapOn:
    id: "login-email-input"
- inputText: "aluno@puc.br"
- tapOn:
    id: "login-password-input"
- inputText: "1234"
- tapOn:
    id: "login-submit-button"
- tapOn:
    id: "movie-card-heart-603"
- tapOn:
    id: "movielist-favorites-button"
- assertVisible:
    id: "favorites-item-603"
