appId: com.puciec.cinefav
---
- launchApp
- tapOn:
    id: "login-email-input"
- inputText: "aluno@puc.br"
- tapOn:
    id: "login-password-input"
- inputText: "1234"
- tapOn:
    id: "login-submit-button"
- tapOn:
    id: "movie-card-603"
- assertVisible:
    id: "detail-screen"
- tapOn:
    id: "detail-favorite-button"
- tapOn:
    id: "detail-back-button"
- assertVisible:
    id: "movielist-screen"
