appId: com.puciec.cinefav
---
- launchApp
- tapOn:
    id: "login-email-input"
- inputText: "aluno@puc.br"
- tapOn:
    id: "login-password-input"
- inputText: "1234"
- tapOn:
    id: "login-submit-button"
- tapOn:
    id: "movielist-search-button"
- evalScript: ${output.termo = "Matrix"}
- tapOn:
    id: "search-input"
- inputText: ${output.termo}
- assertVisible: "Matrix"
